--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
+    "knex": "^3.1.0",
+    "mssql": "^10.0.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "tedious": "^16.6.1"
   }
 }
