--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "knex": "^3.1.0",
@@ -16,6 +17,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "tedious": "^16.6.1"
   }
