--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
+    "jspdf": "^2.5.1",
     "knex": "^3.1.0",
     "mssql": "^10.0.1",
     "next": "14.0.4",
