--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase-admin": "^12.0.0",
     "jspdf": "^2.5.1",
     "knex": "^3.1.0",
+    "moment": "^2.30.1",
     "mssql": "^10.0.1",
     "next": "14.0.4",
     "react": "^18",
